feat: improved history simulation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Set the new PYTHONPATH with your project root
-export PYTHONPATH="/full/path/to/your/project/root:$PYTHONPATH"
+export PYTHONPATH="$(pwd)/engine:$PYTHONPATH"
+export PROJECT_ROOT=$(pwd)
