feat: major rfactor

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 __pycache__
 __models__
 bin
-include
-models
-histories
+/include
+/models
+/history
 lib
 share
 *.pth
 .env
 .idea
 .DS_Store
+.pytest_cache
 pyvenv.cfg
-env
+/env
